2004-10-25  Andras Varga
	
	* tkapp.cc, tkcmd.cc, etc: updated for info() and fullPath()
	signature changes (see include/ChangeLog)

2004-10-20  Andras Varga

	* main.tcl, modinsp2.tcl: preparations for new icons, categorized into 
	several subdirs under bitmaps/. Current icons will be moved to
	into the bitmaps/old subdirectory.
	
	Tkenv now loads icons from subdirectories of dirs in OMNETPP_BITMAP-
	_PATH as well, and they can be referenced from display strings like 
	"subdir/icon", "subdir/subsubdir/icon" , etc. If an icon "icon" in 
	a display string is not found, it is tried as "old/icon" as well.

2004-10-18  Andras Varga

	* usability improvement: allowed user interactions during message
	animation (speed can be changed, STOP button can be clicked, inspector
	can be closed, etc). In Tcl-speak: changed "update idletasks" to
	"update" within animation code (graphmodwin_do_animate, etc).

	* tkinsp2.tcl: animation changed to use [clock clicks]-based timing

2004-10-15  Andras Varga

	* modinsp2.tcl, tkcmd.cc: fixed display strings: didn't handle "," and 
	"=" in args to "t=" properly

	* tkapp.cc: improved "Fast Run until next local event" function: now
	it always animates events occurring in the local module

2004-10-15  Andras Varga

	* window.tcl: fix: "View file" option didn't like some file names

2004-10-10  Andras Varga

	* inspector.cc, tkutil.cc/h: fix: label always displayed "0 objects" 
	above inspector listboxes; refactoring

2004-10-10  Andras Varga

	* main.tcl: changed default "Run until" run mode to Express (was Normal)

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-27  Andras Varga

        * inspector.cc: display class name too on "inspect" buttons 
        (e.g. "encapsulated message" button in cMessage inspector)

2004-09-26  Andras Varga

        * modinsp2.tcl: graphical module windows: adjust window size to fit 
        size of graphics

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-08  Andras Varga
